fixed align items on 'works' page

--- a/src/styles/partials/_contactform.scss
+++ b/src/styles/partials/_contactform.scss
@@ -19,7 +19,7 @@
   .cards-form {
     position: relative;
     width: 800px;
-    height: 600px;
+    height: 550px;
     margin: 0 0 $pageSpacing 0;
     box-shadow: 0 4px 8px 0 rgba(12, 45, 65, 0.144), 0 6px 20px 0 rgba(10, 37, 59, 0.19);
     border-radius: $border-radius;
